made bar chart rough drafts

--- a/index.html
+++ b/index.html
@@ -822,7 +822,7 @@
         numquam hic delectus officia sint ipsum quod enim corrupti minima. Vero, doloremque possimus dolores
         nobis temporibus sequi velit, consectetur, repudiandae iure voluptate a minima.
         <div id="countryVis1" class="vis">
-          <div class="vis-title">What countries received the most left votes?</div>
+          <div class="vis-title">Breakdown of Country Moving Most Right</div>
           <canvas id="countryVisCanvas1"></canvas>
         </div>
       </div>
@@ -903,11 +903,13 @@
                 datasets: [
                   {
                     data: Object.values(votingDataFirst),
-                    label: '2000 Election'
+                    label: '2000 Election',
+                    backgroundColor: 'green'
                   },
                   {
                     data: Object.values(votingDataLast),
-                    label: '2018 Election'
+                    label: '2018 Election',
+                    backgroundColor: 'purple'
                   }
                 ]
               },
@@ -918,6 +920,14 @@
                       scaleLabel: {
                         display: true,
                         labelString: 'Party Affiliation'
+                      }
+                    }
+                  ],
+                  yAxes: [
+                    {
+                      scaleLabel: {
+                        display: true,
+                        labelString: 'Percentage Votes Received'
                       }
                     }
                   ]
@@ -931,6 +941,140 @@
         }
 
         drawBarChart1();
+      </script>
+    </div>
+
+    <div class="vis-group">
+        <!-- David fill this part with real text -->
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates ratione velit aut deserunt, minus,
+        nihil delectus dolorum, animi necessitatibus expedita fuga obcaecati illo tempore culpa! Explicabo qui
+        amet laudantium consectetur provident asperiores beatae blanditiis! Dolorum voluptate fuga
+        repudiandae. Blanditiis dicta tempora corrupti perspiciatis animi quis, quos quibusdam veritatis
+        soluta sunt corporis est dolorum totam magnam labore ut dolore laboriosam saepe harum nesciunt. Ipsa,
+        eum iure vitae asperiores molestias ea facere ducimus laboriosam veritatis deleniti quisquam ullam
+        numquam hic delectus officia sint ipsum quod enim corrupti minima. Vero, doloremque possimus dolores
+        nobis temporibus sequi velit, consectetur, repudiandae iure voluptate a minima.
+        <div id="leftMostCountry" class="vis">
+          <div class="vis-title">Breakdown of Country Moving Most Left</div>
+          <canvas id="leftMostCountryVis"></canvas>
+        </div>
+      </div>
+      <script>
+        function mean(arr) {
+          return arr.reduce((p, c, _, a) => p + c / a.length, 0);
+        }
+
+        function groupBy(data, key) {
+          return data.reduce((acc, row) => {
+            if (!acc[row[key]]) {
+              acc[row[key]] = [];
+            }
+            acc[row[key]].push(row);
+            return acc;
+          }, {});
+        }
+
+        function drawBarChart2(region) {
+          let countryData = null;
+          let req = new XMLHttpRequest();
+          req.open('GET', 'https://api.jsonbin.io/b/5d01889058196b429f531883', true);
+          req.setRequestHeader('secret-key', SECRETKEY);
+          req.onload = function() {
+            var jsonResponse = req.response;
+            countryData = JSON.parse(jsonResponse);
+            const regions = [...new Set(countryData.map(d => d.Region))];
+            const regionData = [];
+
+            regions.forEach(region => {
+              const specificRegion = {};
+              const regionDataFirstMean = mean(
+                countryData
+                  .filter(d => d.Region === region && d.ElectionYear <= 2005)
+                  .map(d => d.WeightedElectionScore)
+              );
+              const regionDataLastMean = mean(
+                countryData
+                  .filter(d => d.Region === region && d.ElectionYear > 2005)
+                  .map(d => d.WeightedElectionScore)
+              );
+              specificRegion['Region'] = region;
+              specificRegion['MeanScore'] = mean([regionDataFirstMean, regionDataLastMean]);
+              regionData.push(specificRegion);
+            });
+
+            var chartNode = document.getElementById('leftMostCountryVis');
+
+            countryData.sort((a, b) => a.WeightedElectionScore - b.WeightedElectionScore);
+            leftMostLastElection = countryData[0];
+            leftMostFirstElection = countryData.find(
+              x =>
+                x.Country === leftMostLastElection.Country &&
+                x.ElectionYear !== leftMostLastElection.ElectionYear
+            );
+
+            console.log(leftMostLastElection, leftMostFirstElection)
+
+            // get votes by denomination (center, center right, etc.)
+            const votingDataLast = {
+              Left: 50.5,
+              'Center Left': 11.7,
+              Center: 0,
+              'Center Right': 27.7,
+              Right: 0
+            };
+            const votingDataFirst = {
+              Left: 53.8,
+              'Center Left': 0,
+              Center: 0,
+              'Center Right': 46.2,
+              Right: 0
+            };
+
+            const barChart = new Chart(chartNode, {
+              type: 'bar',
+              data: {
+                labels: ['Left', 'Center Left', 'Center', 'Center Right', 'Right'],
+                datasets: [
+                  {
+                    data: Object.values(votingDataFirst),
+                    label: '2001 Election',
+                    backgroundColor: 'green'
+                  },
+                  {
+                    data: Object.values(votingDataLast),
+                    label: '2015 Election',
+                    backgroundColor: 'purple'
+                  }
+                ]
+              },
+              options: {
+                scales: {
+                  xAxes: [
+                    {
+                      scaleLabel: {
+                        display: true,
+                        labelString: 'Party Affiliation'
+                      }
+                    }
+                  ],
+                  yAxes: [
+                    {
+                      scaleLabel: {
+                        display: true,
+                        labelString: 'Percentage Votes Received'
+                      }
+                    }
+                  ]
+                }
+              }
+            });
+          };
+          req.send();
+
+          return countryData;
+        }
+
+        drawBarChart2();
       </script>
     </div>
   </body>
